--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LAPKY JUNIOR</title>
+    <title>Home for paws</title>
 
     <!-- preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
